--- a/bank_account.ui
+++ b/bank_account.ui
@@ -225,7 +225,7 @@
      <string>submit</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton">
+   <widget class="QPushButton" name="exit_button">
     <property name="geometry">
      <rect>
       <x>330</x>
